# maxim

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/skills/maxim/: SKILL.md
.github/workflows/: ci.yml
src/maxim/: __init__.py  cli.py  config.py  critic.py  llm.py  loop.py  methods.py  orchestrator.py  planner.py  prompts.py  quality.py  report.py  reputation.py  researcher.py  resilience.py  schemas.py  sentiment.py  synthesizer.py  usage.py  verification.py
src/maxim/tools/: __init__.py  arxiv_api.py  base.py  github_search.py  hn_algolia.py  semantic_scholar.py
tests/: conftest.py  test_cli.py  test_contract.py  test_critic.py  test_critic_calibration.py  test_golden_report.py  test_llm.py  test_loop.py  test_methods.py  test_pipeline.py  test_quality.py  test_report.py  test_reputation.py  test_researcher_loop.py  test_resilience.py  test_schemas.py  test_sentiment.py  test_skill.py  test_smoke.py  test_tools.py  test_usage.py  test_verification.py
tests/golden/: anomaly-detection-report.md
