[project]
name = "maxim"
version = "0.1.0"
description = "Maxim (Multi-Agent eXploration & Intelligence Machine) — a multi-agent research assistant for discovering papers, tech talks, articles, and blogs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.79",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "rich>=13",
]

[project.scripts]
maxim = "maxim:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25",
    "isort>=7",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
